Revert "Convert from polyfill to shim"
This reverts commit fb76d56cc51575396306e1f3299c30e2870e21ab.

The version of the Intl library we are using is broken in Firefox, and there
are no clean releases containing a fix. The Intl library is currently preparing
for a 1.0 release and there are major changes upcoming. Therefore I'm shelving
this attempt to shim until after 1.0.

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "intl-99",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/99designs/intl-99",
   "authors": [
     "Andrew Krespanis <andrew@leftjustified.net>"
   ],
-  "description": "Intl Shim for 99designs",
+  "description": "Intl Polyfill for 99designs",
   "main": "Intl.min.js",
   "keywords": [
     "intl",
