--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "intl-99",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Intl.js polyfill with bundled locales as supported by 99designs",
   "main": "Intl.min.js",
+  "private": true,
   "scripts": {
     "build": "make"
   },
